experimentData/Jadx-detailedExperimentData/errorSamples/decompilation_failures/618/report-618/jadx/tmp/output.txt
Test.java:30: error: illegal start of expression
                    for (?? r12 = z; i5 < r12; r12 = 1) {
                         ^
Test.java:30: error: illegal start of expression
                    for (?? r12 = z; i5 < r12; r12 = 1) {
                          ^
Test.java:30: error: : expected
                    for (?? r12 = z; i5 < r12; r12 = 1) {
                                   ^
3 errors
